--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ termion = "1.5.6"
 log = "0.4"
 log4rs = "1"
 rand = "0.8.4"
+confy = "0.4.0"
+serde = { version = "1.0", features = [ "derive" ] }
+big_num = "0.1.0"
